--- a/AvaloReact/Views/MainWindow.xaml
+++ b/AvaloReact/Views/MainWindow.xaml
@@ -10,14 +10,9 @@
     </Design.DataContext>
 
     
-    <Grid Margin="30" ColumnDefinitions="*" RowDefinitions="*,*">
-        <TextBox Grid.Row="0" Grid.Column="1" Name="TextInput1" Text="Hello World!"/>
-        <TextBox Grid.Row="1" Grid.Column="1" Name="TextInput2" Text="World Ahhh!"/>
+    <Grid Margin="30" ColumnDefinitions="*" RowDefinitions="Auto,*">
+        <TextBox Grid.Row="0" Grid.Column="1" Name="TextInput" Text="{Binding Input^, Mode=TwoWay}"/>
+        <TextBox Grid.Row="1" Grid.Column="1" Name="TextOutput"  Text="{Binding Output, Mode=TwoWay}"
+                 AcceptsReturn="True"/>
     </Grid>
-    <!-- <Panel> -->
-    <!-- -->
-    <!--     <Border Background="Red" CornerRadius="8"> -->
-    <!--         <TextBlock Text="{Binding Greeting}" HorizontalAlignment="Center" VerticalAlignment="Center"/> -->
-    <!--     </Border> -->
-    <!-- </Panel> -->
 </Window>
